src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__attribute_with_args.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [
                    Attribute {
                        is_inner: false,
                        path: [
                            Spanned {
                                node: SymbolU32 {
                                    value: 1,
                                },
                                span: Span {
                                    start: 3,
                                    end: 6,
                                    start_line: 2,
                                    start_col: 3,
                                },
                            },
                        ],
                        args: Some(
                            List(
                                [
                                    KeyValue(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 7,
                                                end: 16,
                                                start_line: 2,
                                                start_col: 7,
                                            },
                                        },
                                        Literal {
                                            kind: String(
                                                "linux",
                                            ),
                                            span: Span {
                                                start: 19,
                                                end: 26,
                                                start_line: 2,
                                                start_col: 19,
                                            },
                                        },
                                    ),
                                ],
                            ),
                        ),
                        span: Span {
                            start: 1,
                            end: 28,
                            start_line: 2,
                            start_col: 1,
                        },
                    },
                ],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 3,
                    },
                    span: Span {
                        start: 32,
                        end: 42,
                        start_line: 3,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 45,
                            end: 47,
                            start_line: 3,
                            start_col: 17,
                        },
                    },
                ),
                span: Span {
                    start: 29,
                    end: 47,
                    start_line: 3,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 47,
        start_line: 2,
        start_col: 1,
    },
}
