src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__binding_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 18,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: TupleStruct {
                                                    path: TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 21,
                                                                        end: 25,
                                                                        start_line: 1,
                                                                        start_col: 22,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 21,
                                                            end: 25,
                                                            start_line: 1,
                                                            start_col: 22,
                                                        },
                                                    },
                                                    fields: [
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 26,
                                                                        end: 27,
                                                                        start_line: 1,
                                                                        start_col: 27,
                                                                    },
                                                                },
                                                                subpattern: Some(
                                                                    Pattern {
                                                                        kind: Range {
                                                                            start: Some(
                                                                                Pattern {
                                                                                    kind: Literal(
                                                                                        Literal {
                                                                                            kind: Int {
                                                                                                value: 1,
                                                                                                suffix: None,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 30,
                                                                                                end: 31,
                                                                                                start_line: 1,
                                                                                                start_col: 31,
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                    span: Span {
                                                                                        start: 30,
                                                                                        end: 31,
                                                                                        start_line: 1,
                                                                                        start_col: 31,
                                                                                    },
                                                                                },
                                                                            ),
                                                                            end: Some(
                                                                                Pattern {
                                                                                    kind: Literal(
                                                                                        Literal {
                                                                                            kind: Int {
                                                                                                value: 10,
                                                                                                suffix: None,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 33,
                                                                                                end: 35,
                                                                                                start_line: 1,
                                                                                                start_col: 34,
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                    span: Span {
                                                                                        start: 33,
                                                                                        end: 35,
                                                                                        start_line: 1,
                                                                                        start_col: 34,
                                                                                    },
                                                                                },
                                                                            ),
                                                                            inclusive: false,
                                                                        },
                                                                        span: Span {
                                                                            start: 30,
                                                                            end: 35,
                                                                            start_line: 1,
                                                                            start_col: 31,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                            span: Span {
                                                                start: 26,
                                                                end: 35,
                                                                start_line: 1,
                                                                start_col: 27,
                                                            },
                                                        },
                                                    ],
                                                    rest_pos: None,
                                                },
                                                span: Span {
                                                    start: 21,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 40,
                                                                        end: 41,
                                                                        start_line: 1,
                                                                        start_col: 41,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 40,
                                                            end: 41,
                                                            start_line: 1,
                                                            start_col: 41,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 40,
                                                    end: 41,
                                                    start_line: 1,
                                                    start_col: 41,
                                                },
                                            },
                                            span: Span {
                                                start: 21,
                                                end: 41,
                                                start_line: 1,
                                                start_col: 22,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 43,
                                                    end: 44,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 48,
                                                            end: 49,
                                                            start_line: 1,
                                                            start_col: 49,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 48,
                                                    end: 49,
                                                    start_line: 1,
                                                    start_col: 49,
                                                },
                                            },
                                            span: Span {
                                                start: 43,
                                                end: 49,
                                                start_line: 1,
                                                start_col: 44,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 51,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 53,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 53,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 53,
        start_line: 1,
        start_col: 1,
    },
}
